# tambo360-ia

./: .dockerignore  .gitignore  Dockerfile  DocumentacionTomi.md  Estructura del backend.md  README.md  docker-compose.yml  env.env  main.py  pyproject.toml  requirements.txt
app/: __init__.py  database.py
app/api/: dependencies.py
app/api/v1/: __init__.py  chat.py  health.py  tambo.py
app/config/: __init__.py  settings.py
app/core/: logging.py  security.py
app/models/: __init__.py  db_models.py  schemas.py
app/services/: ai_service.py  tambo_engine.py
